--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@
 body {
     /* feel free to update these css variables for a quick theme */
     
-    --color1: white;
+    /* --color1: white;
     --color2: white;
     --color3: white;
     --color4: white;
-    --color5: white;
+    --color5: white; */
     
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
         
@@ -16,11 +16,11 @@ body {
     --color4: hsla(187, 41%, 94%, 1);
     --color5: hsla(170, 28%, 95%, 1); */
 
-    /* --color1: hsla(45, 86%, 83%, 1);
+    --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
     --color3: hsla(315, 37%, 86%, 1);
     --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
+    --color5: hsla(224, 40%, 79%, 1);
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
@@ -29,6 +29,10 @@ body {
     
     font-family: 'Titillium Web', sans-serif;
     background-color: var(--color2);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 main {
@@ -41,7 +45,7 @@ main {
 
 section {
     background-color: var(--color5);
-    max-width: 80%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,7 +59,7 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -63,7 +67,7 @@ header {
 
 
 h2 {
-    font-size: 1.8rem;
+    font-size: larger;
     font-weight: bold;
 }
 
@@ -77,6 +81,7 @@ header img {
 
 p {
     margin: var(--gutter);
+    font-size: larger;
 }
   
 footer {
