--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,26 @@
 /* add home page styles here */
 
 img {
-    height: 512px;
+    height: auto;
+    max-width: 100%;
+}
+
+#animalImg {
+    height: auto;
+    max-width: 75%;
+}
+
+.animal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+a {
+    font-size: xx-large;
+}
+
+#animalName {
+    font-size: xx-large;
+    font-weight: bold;
 }
